Fix Java 17 Docker build by replacing List.getFirst() calls.
Render builds with JDK 17, which does not support getFirst() on List.

Co-authored-by: Cursor <cursoragent@cursor.com>